--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -6,15 +6,15 @@ log-level: info
 external-controller: :9090
 proxies:
   - {name: 🇨🇳 中国-3.51MB/s(Youtube:不良林), server: cs.bgp.liuliangzhuanfa.xyz, port: 33514, type: trojan, password: eae49aca-72e6-4465-a863-f5ab350997ef, sni: cs.bgp.liuliangzhuanfa.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.68MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-1.88MB/s(Youtube:不良林), server: a.nmc168.ml, port: 52848, type: vmess, uuid: 6007d258-77fc-43b7-b0fe-63eab16ae430, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-1.06MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇺🇸 美国-7.09MB/s(Youtube:不良林), server: az.az-bgp.chuangshi999.xyz, port: 64340, type: trojan, password: eae49aca-72e6-4465-a863-f5ab350997ef, sni: az.az-bgp.chuangshi999.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-13.00MB/s(Youtube:不良林), server: az.az-bgp.chuangshi999.xyz, port: 64340, type: trojan, password: eae49aca-72e6-4465-a863-f5ab350997ef, sni: az.az-bgp.chuangshi999.xyz, skip-cert-verify: true}
   - {name: 🇺🇸 美国-2.96MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-6.62MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 43960, type: vmess, uuid: eb2f8154-ff58-3b99-b393-28c8eecdbe64, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /j20-sp1, ws-headers: {Host: pp1.zhengzhongfeizhu.xyz}}
   - {name: 🇺🇸 美国-2.04MB/s(Youtube:不良林), server: inap007.xmrth-node.xyz, port: 15567, type: vmess, uuid: 53ad95b1-8693-34e3-98d7-2010ad24aaf9, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /index, ws-headers: {Host: inap007.xmrth-node.xyz}}
+  - {name: 🇫🇷 法国-1.06MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
   - {name: 🇬🇧 英国-2.13MB/s(Youtube:不良林), server: 88.150.137.201, port: 1021, type: ssr, cipher: aes-128-ctr, password: sEscPBiAD9K$&@79, protocol: auth_aes128_md5, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
   - {name: 🇬🇧 英国-1.49MB/s(Youtube:不良林), server: 185.105.191.227, port: 443, type: vmess, uuid: 248c42c7-5328-46f6-8473-7a7e7c0b3c39, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /f1hUi8k, ws-headers: {Host: 185.105.191.227}}
+  - {name: 🇦🇺 澳大利亚-1.28MB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
+  - {name: 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
+  - {name: 🇫🇷 法国-434.4KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
@@ -22,30 +22,30 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇨🇳 中国-3.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-7.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-13.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.06MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.13MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.49MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.28MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
+      - 🇫🇷 法国-434.4KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
       - 🇨🇳 中国-3.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-7.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-13.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.06MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.13MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.49MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.28MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
+      - 🇫🇷 法国-434.4KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
@@ -53,15 +53,15 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇨🇳 中国-3.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-7.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-13.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.06MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.13MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.49MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.28MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
+      - 🇫🇷 法国-434.4KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -73,30 +73,30 @@ proxy-groups:
       - 🎯 全球直连
       - 🔰 节点选择
       - 🇨🇳 中国-3.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-7.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-13.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.06MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.13MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.49MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.28MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
+      - 🇫🇷 法国-434.4KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - 🇨🇳 中国-3.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-7.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-13.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.06MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.13MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.49MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.28MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
+      - 🇫🇷 法国-434.4KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
@@ -104,15 +104,15 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇨🇳 中国-3.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-7.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-13.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.06MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.13MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.49MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.28MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
+      - 🇫🇷 法国-434.4KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,15 +129,15 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇨🇳 中国-3.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.68MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-7.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-13.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.06MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.13MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.49MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.28MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
+      - 🇫🇷 法国-434.4KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
