--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-2.02MB/s(Youtube:不良林), server: a.nmc168.ml, port: 52848, type: vmess, uuid: 6007d258-77fc-43b7-b0fe-63eab16ae430, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-1.37MB/s(Youtube:不良林), server: 185.105.191.227, port: 443, type: vmess, uuid: 248c42c7-5328-46f6-8473-7a7e7c0b3c39, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /f1hUi8k, ws-headers: {Host: 185.105.191.227}}
-  - {name: 🇫🇷 法国-384.3KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-1.08MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-2.19MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 未知国家-2.83MB/s(Youtube:不良林), server: vietnam.hn15.shopvpn.net, port: 80, type: vmess, uuid: 23959a9d-be8b-45d7-b284-5a3f9f29039a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /shopvpn.net, ws-headers: {Host: quangtien.akamaized.net}}
-  - {name: 🇨🇳 中国-4.13MB/s(Youtube:不良林), server: 116.129.254.78, port: 63004, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 116.129.254.78}}
-  - {name: 🇨🇳 中国-3.20MB/s(Youtube:不良林), server: 116.129.254.65, port: 63004, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 116.129.254.65}}
+  - {name: 🇺🇸 美国-3.03MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
   - {name: 🇦🇺 澳大利亚-588.4KB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
+  - {name: 🇬🇧 英国-163.9KB/s(Youtube:不良林), server: 185.105.191.227, port: 443, type: vmess, uuid: 248c42c7-5328-46f6-8473-7a7e7c0b3c39, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /f1hUi8k, ws-headers: {Host: 185.105.191.227}}
+  - {name: 🇺🇸 美国-1.08MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-384.3KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇨🇳 中国-399.3KB/s(Youtube:不良林), server: 112.64.53.176, port: 63004, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 112.64.53.176}}
+  - {name: 🇺🇸 美国-2.74MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-1.03MB/s(Youtube:不良林), server: tw2.chunyua.online, port: 14725, type: trojan, password: 7323b7f1-dcb5-499d-b6ae-f51a638ba826, sni: tw2.chunyua.online, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-941.1KB/s(Youtube:不良林), server: 144.24.88.101, port: 16833, type: vmess, uuid: f5425ccf-3946-4fb4-eb24-5393d78a392f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-476.7KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.37MB/s(Youtube:不良林)
-      - 🇫🇷 法国-384.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.19MB/s(Youtube:不良林)
-      - 未知国家-2.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.03MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-588.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-163.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
+      - 🇫🇷 法国-384.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-399.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.03MB/s(Youtube:不良林)
+      - 🇬🇧 英国-941.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-476.7KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.37MB/s(Youtube:不良林)
-      - 🇫🇷 法国-384.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.19MB/s(Youtube:不良林)
-      - 未知国家-2.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.03MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-588.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-163.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
+      - 🇫🇷 法国-384.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-399.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.03MB/s(Youtube:不良林)
+      - 🇬🇧 英国-941.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-476.7KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.37MB/s(Youtube:不良林)
-      - 🇫🇷 法国-384.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.19MB/s(Youtube:不良林)
-      - 未知国家-2.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.03MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-588.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-163.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
+      - 🇫🇷 法国-384.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-399.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.03MB/s(Youtube:不良林)
+      - 🇬🇧 英国-941.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-476.7KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.37MB/s(Youtube:不良林)
-      - 🇫🇷 法国-384.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.19MB/s(Youtube:不良林)
-      - 未知国家-2.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.03MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-588.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-163.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
+      - 🇫🇷 法国-384.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-399.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.03MB/s(Youtube:不良林)
+      - 🇬🇧 英国-941.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-476.7KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.37MB/s(Youtube:不良林)
-      - 🇫🇷 法国-384.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.19MB/s(Youtube:不良林)
-      - 未知国家-2.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.03MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-588.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-163.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
+      - 🇫🇷 法国-384.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-399.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.03MB/s(Youtube:不良林)
+      - 🇬🇧 英国-941.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-476.7KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.37MB/s(Youtube:不良林)
-      - 🇫🇷 法国-384.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.19MB/s(Youtube:不良林)
-      - 未知国家-2.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.03MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-588.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-163.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
+      - 🇫🇷 法国-384.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-399.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.03MB/s(Youtube:不良林)
+      - 🇬🇧 英国-941.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-476.7KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.37MB/s(Youtube:不良林)
-      - 🇫🇷 法国-384.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.19MB/s(Youtube:不良林)
-      - 未知国家-2.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.03MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-588.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-163.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
+      - 🇫🇷 法国-384.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-399.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.03MB/s(Youtube:不良林)
+      - 🇬🇧 英国-941.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-476.7KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
